--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -120,3 +120,15 @@ environments:
             password: password
             pooled: true
             driverClassName: org.postgresql.Driver
+
+---
+environments:
+    development:
+        grails:
+            serverURL: http://localhost:8080
+    test:
+        grails:
+            serverURL: http://localhost:8080
+    production:
+        grails:
+            serverURL: http://imageannotation.nds.ox.ac.uk:8080
