--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     compile 'org.grails.plugins:spring-security-ui:3.0.0.M2'
     compile "org.grails.plugins:spring-security-rest:2.0.0.M2"
     provided "org.springframework.boot:spring-boot-starter-tomcat"
+    runtime 'org.postgresql:postgresql:9.3-1100-jdbc41'
 }
 
 bootRun {
