--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     compile "org.grails.plugins:spring-security-rest:2.0.0.M2"
     provided "org.springframework.boot:spring-boot-starter-tomcat"
     runtime 'org.postgresql:postgresql:9.3-1100-jdbc41'
+    compile 'org.grails.plugins:audit-logging:2.0.6'
 }
 
 bootRun {
