--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
     compile 'org.grails.plugins:spring-security-core:3.1.2'
-    compile 'org.grails.plugins:spring-security-ui:3.0.0.M2'
+    compile 'org.grails.plugins:spring-security-ui:3.0.2'
     compile "org.grails.plugins:spring-security-rest:2.0.0.M2"
     provided "org.springframework.boot:spring-boot-starter-tomcat"
     runtime 'org.postgresql:postgresql:9.3-1100-jdbc41'
