Added csv export function

--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     provided "org.springframework.boot:spring-boot-starter-tomcat"
     runtime 'org.postgresql:postgresql:9.3-1100-jdbc41'
     compile 'org.grails.plugins:audit-logging:2.0.6'
+    compile "org.grails.plugins:export:2.0.0"
 }
 
 bootRun {
